[package]
name = "mysgm"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
log = "0.4"
openmls = { path = "../openmls/openmls" }
openmls_rust_crypto = { path = "../openmls/openmls_rust_crypto" }
openmls_traits = { path = "../openmls/traits" }
pretty_env_logger = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_with = {version = "3.14", features = ["hex"] }
tls_codec = "0.4"